--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ali-oss": "^6.1.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
